AKS/mssql-tep.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
 name: mssql-tep # name of the StatefulSet workload, the SQL Server instance name is derived from this. We suggest to keep this name same as the .spec.template.metadata.labels, .spec.selector.matchLabels and .spec.serviceName to avoid confu>spec:
spec: 
 serviceName: "mssql" # serviceName is the name of the service that governs this StatefulSet. This service must exist before the StatefulSet, and is responsible for the network identity of the set.
 replicas: 1 # only one pod, with one SQL Server instance deployed.
 selector:
  matchLabels:
   app: tep-sql
   tier: database  # this has to be the same as .spec.template.metadata.labels
 template:
  metadata:
   labels:
    app: tep-sql
    tier: database # this has to be the same as .spec.selector.matchLabels, as documented [here](https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/):
  spec:
   securityContext:
     fsGroup: 10001
   containers:
   - name: mssql-tep # container name within the pod.
     image: mcr.microsoft.com/mssql/server:2019-latest
     ports:
     - containerPort: 1433
       name: tcpsql
     volumeMounts:
     - name: mssql-tep
       mountPath: "/var/opt/mssql"

 volumeClaimTemplates:
   - metadata:
      name: mssql-tep
     spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: local-storage
      resources:
       requests:
        storage: 2Gi
