AKS/sdp-api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sdp-api
spec:
  selector:
    matchLabels:
      app: sdp-api
      tier: backend
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: sdp-api
        tier: backend
    spec:
      imagePullSecrets:
      - name: my-registry-key
      containers:
      - name: sdp-api
        image: modstudiocrpoc.azurecr.io/sdp-api:v1
        ports:
        - containerPort: 8080
