AKS/sdp-ui-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sdp-ui
spec:
  selector:
    matchLabels:
      app: sdp-ui
      tier: frontend
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: sdp-ui
        tier: frontend
    spec:
      containers:
      - name: sdp-ui
        image: modstudiocrpoc.azurecr.io/docker-studio-sdp-ui:v1
        ports:
        - containerPort: 80
