AKS/tep-backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tep-backend
spec:
  selector:
    matchLabels:
      app: tep-backend
      tier: backend
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: tep-backend
        tier: backend
    spec:
#      imagePullSecrets:
#      - name: my-registry-key
      containers:
      - name: tep-backend
        image: modstudiocrpoc.azurecr.io/new-tepbackend:v1
        ports:
        - containerPort: 8080
