AKS/mssql-sdp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mssql-sdp-service
spec:
  type: ClusterIP
  selector:
    app: mssql-sdp
    tier: database
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 1433
      targetPort: 1433
