AKS/mssql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mssql-tep-service
spec:
  type: NodePort
  selector:
    app: tep-sql
    tier: database
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 1433
      targetPort: 1433
      nodePort: 31322
