AKS/sdp-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sdp-api-service
spec:
  type: ClusterIP
  selector:
    app: sdp-api
    tier: backend
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 8080
      targetPort: 8080
