AKS/sdp-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sdp-ui-service
spec:
  type: NodePort
  selector:
    app: sdp-ui
    tier: frontend
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 80
      targetPort: 80
      nodePort: 31420
