AKS/tep-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-tep-service
spec:
  type: NodePort
  selector:
    app: tep-backend
    tier: backend
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 8080
      targetPort: 8080
      nodePort: 31047
