AKS/tep-frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-tep-service
spec:
  type: NodePort
  selector:
    app: tep
    tier: frontend
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 8080
      targetPort: 8080
      nodePort: 30152
